Figured out how to add a for loop in HTML using Flask/Jinja2. Currently, the loop takes in the Recon object from Backend.py. Plan is to add support for if statements to add buttons to labels to help end user determine if a recon is a single or a double.

--- a/templates/ReconWindow.html
+++ b/templates/ReconWindow.html
@@ -22,9 +22,20 @@
         </form>
         </div>
 
-        <div class="Results_Wrapper">
-
-        </div>
+        <table>
+            <tr>
+                <th>Account Name</th>
+                <th>Account Balance</th>
+                <th>Recon Status</th>
+            </tr>
+            {% for account_Name in data %}
+            <tr>
+                <td>{{account_Name.account_Name}}</td>
+                <td>${{account_Name.account_Balance}}</td>
+                <td>{{account_Name.account_Status}}</td>
+            </tr>
+            {% endfor %}
+        </table>
 
     </div>
 </body>
