--- a/templates/ReconWindow.html
+++ b/templates/ReconWindow.html
@@ -4,55 +4,91 @@
     <meta charset="UTF-8">
     <title>Reconciliation Software</title>
 
-    <link rel="stylesheet" href="../static/ReconWindow.css">
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
 </head>
-<body>
-    <div class="Main_Wrapper">
+<body class="p-3 mb-2 bg-info" align="center">
 
-        <div class="Main_Title_Wrapper">
-            <h1>Select a Spreadsheet</h1>
+<div id="page-content-wrapper">
+    <div class="row">
+        <div class="col-1"></div>
+        <div class="col-10" align="center">
+            <div class="p-3 mb-2 bg-primary text-white">
+                <h1 class="text-center">Select a Spreadsheet</h1>
+            </div>
         </div>
+        <div class="col-1"></div>
+    </div>
 
-        <div class="File_Upload_Wrapper">
-            <form action="{{ url_for('recon_Window') }}" enctype=multipart/form-data  method="POST">
-                <input type="file" name="excel_file" accept=".xlsx">
-            <input type="submit" name="TheButton" value="Begin Reconciliation">
+    <div class="row">
 
-        </form>
+        <div class="col-1"></div>
+        <div class="col-10" align="center">
+            <div class="p-3 mb-2 bg-dark text-white">
+
+                <form action="{{ url_for('recon_Window') }}" enctype=multipart/form-data method="POST">
+                    <input type="file" name="excel_file" accept=".xlsx">
+                    <input type="submit" name="TheButton" value="Begin Reconciliation" class="btn btn-success">
+                </form>
+            </div>
         </div>
-
-        <table>
-            <tr>
-                <th>Account Name</th>
-                <th>Account Balance</th>
-                <th>Recon Status</th>
-            </tr>
-            {% for account_Name in data %}
-            <tr>
-                <td>{{account_Name.account_Name}}</td>
-                <td>${{account_Name.account_Balance}}</td>
-
-
-                {% if account_Name.account_Status_Exists: %}
-                    <td>{{account_Name.account_Name}} Just Needs to be updated</td>
-                {% else %}
-                    <td>{{account_Name.account_Name}} Needs to be Created
-                        <form action="{{ url_for('create_Recon_Single') }}" method="POST">
-                            <input type="submit" name=Single_Recon value="Assign Single Reconciliation {{account_Name.account_Name}}">
-                        </form>
-
-                        <form action="{{ url_for('create_Recon_Double') }}" method="POST">
-                            <input type="submit" name=Double_Recon value="Assign Double Reconciliation {{account_Name.account_Name}}">
-                        </form>
-                    </td>
-
-                {% endif %}
-
-            </tr>
-            {% endfor %}
-        </table>
+        <div class="col-1"></div>
 
     </div>
+
+    <div class="row" align="center">
+        <div class="col-1"></div>
+        <div class="col-10">
+            <div class="p-3 mb-2 bg-dark text-white">
+
+                <table class="table table-bordered table-dark">
+                    <tr align="center">
+                        <th>Account Name</th>
+                        <th>Account Balance</th>
+                        <th>Recon Status</th>
+
+
+                    </tr>
+                    {% for account_Name in data %}
+                    <tr align="center">
+                        <td>{{account_Name.account_Name}}</td>
+                        <td>${{account_Name.account_Balance}}</td>
+
+
+                        {% if account_Name.account_Status_Exists: %}
+                        <td>{{account_Name.account_Name[0:5]}} Just Needs to be updated</td>
+                        {% else %}
+                        <td>{{account_Name.account_Name[0:5]}} Needs to be Created</td>
+                        <td align="center">
+                            <form action="{{ url_for('create_Recon_Single') }}" method="POST">
+                                <input type="submit" name=Single_Recon
+                                       value="Assign Single Reconciliation {{account_Name.account_Name[0:5]}}"
+                                       class="btn btn-primary"
+                                       >
+                            </form>
+                        </td>
+                        <td align="center">
+
+                            <form action="{{ url_for('create_Recon_Double') }}" method="POST">
+                                <input type="submit" name=Double_Recon
+                                       value="Assign Double Reconciliation {{account_Name.account_Name[0:5]}}"
+                                       class="btn btn-secondary"
+                                       >
+                            </form>
+                        </td>
+
+                        {% endif %}
+
+                    </tr>
+                    {% endfor %}
+                </table>
+            </div>
+        </div>
+        <div class="col-1"></div>
+    </div>
+
+</div>
 </body>
 </html>
